--- a/ui_win.rc
+++ b/ui_win.rc
@@ -32,9 +32,9 @@ ZOOMOUT_ICO    ICON   "zoomout.ico"
 
 /* Cursors for the preview window */
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDC_FF_HAND_OPEN     CURSOR "cursor_hand_open.cur"
-IDC_FF_HAND_GRAB     CURSOR "cursor_hand_grab.cur"
-IDC_FF_HAND_QUESTION CURSOR "cursor_hand_question.cur"
+HAND_OPEN     CURSOR "cursor_hand_open.cur"
+HAND_GRAB     CURSOR "cursor_hand_grab.cur"
+HAND_QUESTION CURSOR "cursor_hand_question.cur"
 
 /* left,top,w,h */
 
