The "version info" resource is now included in a `TPLT` resource (required for compatibility with Windows NT 3.51)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@416 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/win_res.rc
+++ b/win_res.rc
@@ -26,4 +26,4 @@
 #include "manifest.rc"
 #include "version_win.rc"
 
-// "1032 TPLT" and "1064 TPLT" will be added by the 3264_mixer tool
+// "1032 TPLT", "1064 TPLT", "3032 TPLT", and "3064 TPLT" will be added by the 3264_mixer tool
