--- a/ui_win.rc
+++ b/ui_win.rc
@@ -25,10 +25,7 @@
 #include "ui.h"
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-/*CAUTION_BMP  BITMAP "caution.bmp"*/
 CAUTION_ICO    ICON   "caution.ico"
-ZOOMIN_ICO     ICON   "zoomin.ico"
-ZOOMOUT_ICO    ICON   "zoomout.ico"
 
 /* Cursors for the preview window */
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
@@ -48,11 +45,12 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* The class "Preview" is defined during run-time ui_win.c */
+	/* "Preview" is a subclass of "STATIC", defined in ui_win.c */
 	CONTROL         "",            PREVIEWITEM,     "Preview",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
-	CONTROL         "ZOOMIN_ICO",  ZOOMINITEM,      "Static",   SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY, 103,115, 12,12
-	CONTROL         "ZOOMOUT_ICO", ZOOMOUTITEM,     "Static",   SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY, 15,115, 12,12
-	CONTROL         "",            ZOOMLEVELITEM,   "Static",   SS_CENTER|SS_NOTIFY,                37,115, 56,12
+
+	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
+	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
+	CONTROL         "",  ZOOMLEVELITEM,   "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 38,115, 55,12
 
 	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
 	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
@@ -86,11 +84,11 @@ BEGIN
 	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
 	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
-	/* The class "CautionSign" is defined in ui_win.c */
-	CONTROL         "CAUTION_ICO",FIRSTICONITEM,   "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,147, 16,16
-	CONTROL         "CAUTION_ICO",FIRSTICONITEM+1, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,175, 16,16
-	CONTROL         "CAUTION_ICO",FIRSTICONITEM+2, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,203, 16,16
-	CONTROL         "CAUTION_ICO",FIRSTICONITEM+3, "CautionSign",SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  15,231, 16,16
+	/* "Caution" is a subclass of "Button", defined in ui_win.c */
+	CONTROL         "!",FIRSTICONITEM,   "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
+	CONTROL         "!",FIRSTICONITEM+1, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
+	CONTROL         "!",FIRSTICONITEM+2, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
+	CONTROL         "!",FIRSTICONITEM+3, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
 
 	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
@@ -112,11 +110,12 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* The class "Preview" is defined during run-time ui_win.c */
+	/* "Preview" is a subclass of "STATIC", defined in ui_win.c */
 	CONTROL         "",           PREVIEWITEM,      "Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
-	CONTROL         "ZOOMIN_ICO", ZOOMINITEM,       "Static", SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,  103,115, 12,12
-	CONTROL         "ZOOMOUT_ICO",ZOOMOUTITEM,      "Static", SS_ICON|SS_REALSIZEIMAGE|SS_NOTIFY,   15,115, 12,12
-	CONTROL         "",           ZOOMLEVELITEM,    "Static", SS_CENTER|SS_NOTIFY,                  37,115, 56,12
+
+	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
+	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
+	CONTROL         "",  ZOOMLEVELITEM,   "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 37,115, 56,12
 
 	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
 	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
