--- a/ui_win.rc
+++ b/ui_win.rc
@@ -61,14 +61,14 @@ BEGIN
 	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
 	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,                "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,10, 105,10
-	CONTROL         "",FIRSTCTLITEM+1,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,25, 105,10
-	CONTROL         "",FIRSTCTLITEM+2,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,40, 105,10
-	CONTROL         "",FIRSTCTLITEM+3,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,55, 105,10
-	CONTROL         "",FIRSTCTLITEM+4,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,70, 105,10
-	CONTROL         "",FIRSTCTLITEM+5,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,85, 105,10
-	CONTROL         "",FIRSTCTLITEM+6,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,100, 105,10
-	CONTROL         "",FIRSTCTLITEM+7,              "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                "FoundrySlider", 0,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              "FoundrySlider", 0,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              "FoundrySlider", 0,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              "FoundrySlider", 0,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              "FoundrySlider", 0,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              "FoundrySlider", 0,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              "FoundrySlider", 0,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              "FoundrySlider", 0,  154,115, 105,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -131,14 +131,14 @@ BEGIN
 	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
 	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,    "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 10, 100,10
-	CONTROL         "",FIRSTCTLITEM+1,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 25, 100,10
-	CONTROL         "",FIRSTCTLITEM+2,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 40, 100,10
-	CONTROL         "",FIRSTCTLITEM+3,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 55, 100,10
-	CONTROL         "",FIRSTCTLITEM+4,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 70, 100,10
-	CONTROL         "",FIRSTCTLITEM+5,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154, 85, 100,10
-	CONTROL         "",FIRSTCTLITEM+6,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,100, 100,10
-	CONTROL         "",FIRSTCTLITEM+7,  "msctls_trackbar32",TBS_HORZ|TBS_AUTOTICKS,  154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    "FoundrySlider", 0,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  "FoundrySlider", 0,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  "FoundrySlider", 0,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  "FoundrySlider", 0,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  "FoundrySlider", 0,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  "FoundrySlider", 0,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  "FoundrySlider", 0,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  "FoundrySlider", 0,  154,115, 100,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
