--- a/ui_win.rc
+++ b/ui_win.rc
@@ -98,7 +98,7 @@ BEGIN
 	PUSHBUTTON      "Load...", OPENITEM,     10, 253, 42, 14
 	PUSHBUTTON      "Save...", SAVEITEM,     60, 253, 42, 14
 	PUSHBUTTON      "Make...", MAKEITEM,    110, 253, 42, 14
-	PUSHBUTTON      "Help",    HELPITEM,    160, 253, 42, 14 
+	PUSHBUTTON      "Help",    HELPITEM,    160, 253, 42, 14
 	PUSHBUTTON      "Cancel",  IDCANCEL,    210, 253, 42, 14
 END
 
@@ -160,7 +160,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSME
 CAPTION "Make Standalone Filter"
 FONT 8, "MS Sans Serif"
 BEGIN
-	DEFPUSHBUTTON   "OK",     IDOK,         156,219, 42,14
+	DEFPUSHBUTTON   "OK...",     IDOK,               156,219, 42,14
 
 	/* for initial values of the following EDITTEXT fields, see ui_build.c */
 	EDITTEXT        CATEGORYITEM,                    50, 10, 148,12
