--- a/ui_win.rc
+++ b/ui_win.rc
@@ -45,12 +45,12 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* "Preview" is a subclass of "STATIC", defined in ui_win.c */
+	/* "Preview" is a subclass of "Static", defined in ui_win.c */
 	CONTROL         "",            PREVIEWITEM,     "Preview",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
 
-	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
-	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
-	CONTROL         "",  ZOOMLEVELITEM,   "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 38,115, 55,12
+	CONTROL         "+", ZOOMINITEM,      BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
+	CONTROL         "-", ZOOMOUTITEM,     BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
+	CONTROL         "",  ZOOMLEVELITEM,   BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 38,115, 55,12
 
 	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
 	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
@@ -110,12 +110,12 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* "Preview" is a subclass of "STATIC", defined in ui_win.c */
+	/* "Preview" is a subclass of "Static", defined in ui_win.c */
 	CONTROL         "",           PREVIEWITEM,      "Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
 
-	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
-	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
-	CONTROL         "",  ZOOMLEVELITEM,   "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 37,115, 56,12
+	CONTROL         "+", ZOOMINITEM,      BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
+	CONTROL         "-", ZOOMOUTITEM,     BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
+	CONTROL         "",  ZOOMLEVELITEM,   BUTTON,   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 37,115, 56,12
 
 	LTEXT           "ctl(0)",FIRSTCTLLABELITEM,     129, 10, 25,12
 	LTEXT           "ctl(1)",FIRSTCTLLABELITEM+1,   129, 25, 25,12
