Preview uses now the BufferProcs instead of the HandleProcs, because Adobe writes "In general, the Buffer suite routines are more effective for memory allocation than the Handle suite. The Buffer suite may have access to memory unavailable to the Handle suite. You should use the Handle suite, however, if the data you are managing is a Mac OS handle."
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@484 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -52,7 +52,7 @@ vpath %.c telegraphics_common/tt telegraphics_common/adobeplugin ../MoreFiles/So
 
 # list of source files
 SRC_COMMON = main.c funcs.c process.c node.c symtab.c \
-	ui.c ui_build.c preview.c read.c save.c make.c obfusc.c \
+	ui.c ui_build.c preview.c read.c save.c make.c obfusc.c ff_misc.c \
 	scripting.c y.tab.c lex.yy.c str.c
 SRC_OSX = dbg_mac.c ui_mac.c make_mac.c load_mac.c ui_compat_mac.c \
 	choosefile_nav.c preview_mac.c \
