--- a/Makefile.win
+++ b/Makefile.win
@@ -51,7 +51,7 @@ vpath %.c telegraphics_common\tt telegraphics_common\adobeplugin
 
 # list of source files
 SRC_COMMON = main.c funcs.c process.c node.c symtab.c \
-	ui.c ui_build.c preview.c read.c save.c make.c obfusc.c \
+	ui.c ui_build.c preview.c read.c save.c make.c obfusc.c ff_misc.c \
 	scripting.c y.tab.c lex.yy.c str.c
 SRC_W32 = dbg_win.c manifest.c ui_win.c make_win.c versioninfo_modify_win.c load_win.c ui_compat_win.c \
 	choosefile_win.c ui_build_win.c compat_string.c compat_win.c compat_win_resource.c \
