Translation to German, part 1 (Work-In-Progress)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@492 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/visual_studio/FilterFoundry.vcxproj
+++ b/visual_studio/FilterFoundry.vcxproj
@@ -253,6 +253,7 @@ foundry_3264_mixer.bat
     <ClInclude Include="..\c.h" />
     <ClInclude Include="..\ff.h" />
     <ClInclude Include="..\funcs.h" />
+    <ClInclude Include="..\language.h" />
     <ClInclude Include="..\manifest.h" />
     <ClInclude Include="..\ff_misc.h" />
     <ClInclude Include="..\node.h" />
@@ -279,6 +280,7 @@ foundry_3264_mixer.bat
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\ff_misc.c" />
+    <ClCompile Include="..\language.c" />
     <ClCompile Include="..\obfusc.c" />
     <ClCompile Include="..\slider_win.c" />
     <ClCompile Include="..\telegraphics_common\adobeplugin\dllmain.c" />
