Nearly all is now translated in German
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@493 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/language_win.rc
+++ b/language_win.rc
@@ -61,7 +61,27 @@ STRINGTABLE
     MSG_ZOOM_IN_ID, MSG_ZOOM_IN_ENUS
     MSG_ZOOM_OUT_ID, MSG_ZOOM_OUT_ENUS
     MSG_FULLY_ZOOM_INOUT_ID, MSG_FULLY_ZOOM_INOUT_ENUS
-} 
+	MSG_LOAD_FILTER_SETTINGS_TITLE_ID, MSG_LOAD_FILTER_SETTINGS_TITLE_ENUS
+	MSG_SAVE_FILTER_SETTINGS_TITLE_ID, MSG_SAVE_FILTER_SETTINGS_TITLE_ENUS
+	MSG_MAKE_FILTER_SETTINGS_TITLE_ID, MSG_MAKE_FILTER_SETTINGS_TITLE_ENUS
+	MSG_ALL_SUPPORTED_FILES_ID, MSG_ALL_SUPPORTED_FILES_ENUS
+	MSG_ALL_FILES_ID, MSG_ALL_FILES_ENUS
+	MSG_OPEN_AFS_ID, MSG_OPEN_AFS_ENUS
+	MSG_OPEN_TXT_ID, MSG_OPEN_TXT_ENUS
+	MSG_OPEN_8BF_ID, MSG_OPEN_8BF_ENUS
+	MSG_OPEN_PFF_ID, MSG_OPEN_PFF_ENUS
+	MSG_OPEN_PRM_ID, MSG_OPEN_PRM_ENUS
+	MSG_OPEN_RSRC_ID, MSG_OPEN_RSRC_ENUS
+	MSG_OPEN_FFX_ID, MSG_OPEN_FFX_ENUS
+	MSG_SAVE_AFS_ID, MSG_SAVE_AFS_ENUS
+	MSG_SAVE_PFF_ID, MSG_SAVE_PFF_ENUS
+	MSG_SAVE_TXT_ID, MSG_SAVE_TXT_ENUS
+	MSG_MAKE_8BF_ID, MSG_MAKE_8BF_ENUS
+	MSG_ABOUT_BY_ID, MSG_ABOUT_BY_ENUS
+	MSG_ABOUT_BUILT_USING_ID, MSG_ABOUT_BUILT_USING_ENUS
+	MSG_ABOUT_LATEST_VERSION_FROM_ID, MSG_ABOUT_LATEST_VERSION_FROM_ENUS
+	MSG_ABOUT_CONTACT_AUTHOR_ID, MSG_ABOUT_CONTACT_AUTHOR_ENUS
+}
 
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 STRINGTABLE
@@ -104,4 +124,25 @@ STRINGTABLE
     MSG_ZOOM_IN_ID, MSG_ZOOM_IN_DEDE
     MSG_ZOOM_OUT_ID, MSG_ZOOM_OUT_DEDE
     MSG_FULLY_ZOOM_INOUT_ID, MSG_FULLY_ZOOM_INOUT_DEDE
+	MSG_LOAD_FILTER_SETTINGS_TITLE_ID, MSG_LOAD_FILTER_SETTINGS_TITLE_DEDE
+	MSG_SAVE_FILTER_SETTINGS_TITLE_ID, MSG_SAVE_FILTER_SETTINGS_TITLE_DEDE
+	MSG_MAKE_FILTER_SETTINGS_TITLE_ID, MSG_MAKE_FILTER_SETTINGS_TITLE_DEDE
+	MSG_ALL_SUPPORTED_FILES_ID, MSG_ALL_SUPPORTED_FILES_DEDE
+	MSG_ALL_FILES_ID, MSG_ALL_FILES_DEDE
+	MSG_OPEN_AFS_ID, MSG_OPEN_AFS_DEDE
+	MSG_OPEN_TXT_ID, MSG_OPEN_TXT_DEDE
+	MSG_OPEN_8BF_ID, MSG_OPEN_8BF_DEDE
+	MSG_OPEN_PFF_ID, MSG_OPEN_PFF_DEDE
+	MSG_OPEN_PRM_ID, MSG_OPEN_PRM_DEDE
+	MSG_OPEN_RSRC_ID, MSG_OPEN_RSRC_DEDE
+	MSG_OPEN_FFX_ID, MSG_OPEN_FFX_DEDE
+	MSG_SAVE_AFS_ID, MSG_SAVE_AFS_DEDE
+	MSG_SAVE_PFF_ID, MSG_SAVE_PFF_DEDE
+	MSG_SAVE_TXT_ID, MSG_SAVE_TXT_DEDE
+	MSG_MAKE_8BF_ID, MSG_MAKE_8BF_DEDE
+	MSG_ABOUT_BY_ID, MSG_ABOUT_BY_DEDE
+	MSG_ABOUT_BUILT_USING_ID, MSG_ABOUT_BUILT_USING_DEDE
+	MSG_ABOUT_LATEST_VERSION_FROM_ID, MSG_ABOUT_LATEST_VERSION_FROM_DEDE
+	MSG_ABOUT_CONTACT_AUTHOR_ID, MSG_ABOUT_CONTACT_AUTHOR_DEDE
+
 }
