--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -24,15 +24,60 @@
 // Attention: This file may only contain 5 properties. If this number changes,
 //            please also change PiPL.rc
 
-VENDORID, LC(k,i,n,d), NULLID, 4L, LC(8,B,F,M),	/* Filter module */
-VENDORID, LC(v,e,r,s), NULLID, 4L, latestFilterSubVersion,latestFilterVersion, /* Version Number */
+/* Filter module */
+VENDORID, LC(k,i,n,d), NULLID, 4L, LC(8,B,F,M),
 
-VENDORID, LC(m,o,d,e), NULLID, 4L, /* first 2 bytes:  */ flagSupportsGrayScale|flagSupportsIndexedColor|flagSupportsRGBColor|flagSupportsCMYKColor|flagSupportsHSLColor|flagSupportsHSBColor|flagSupportsMultichannel,
-                                   /* second 2 bytes: */ flagSupportsDuotone|flagSupportsLABColor,
+/* Version Number */
+VENDORID, LC(v,e,r,s), NULLID, 4L, latestFilterSubVersion, latestFilterVersion,
+
+
+
+#define doesSupportsBitmap         flagSupportsBitmap
+#define doesSupportsGrayScale      flagSupportsGrayScale
+#define doesSupportsIndexedColor   flagSupportsIndexedColor
+#define doesSupportsRGBColor       flagSupportsRGBColor
+#define doesSupportsCMYKColor      flagSupportsCMYKColor
+#define doesSupportsHSLColor       flagSupportsHSLColor
+#define doesSupportsHSBColor       flagSupportsHSBColor
+#define doesSupportsMultichannel   flagSupportsMultichannel
+#define doesSupportsDuotone        32768 // (flagSupportsDuotone << 8)    RC doesn't know <<8, nor *256 !
+#define doesSupportsLABColor       16384 // (flagSupportsLABColor << 8)   RC doesn't know <<8, nor *256 !
+
+/* Supported modes */
+/* Second byte:    */
+VENDORID, LC(m,o,d,e), NULLID, 4L, /* First byte:     */ /*doesSupportsBitmap|*/
+                                                         doesSupportsGrayScale|
+                                                         doesSupportsIndexedColor|
+                                                         doesSupportsRGBColor|
+                                                         doesSupportsCMYKColor|
+                                                         doesSupportsHSLColor|
+                                                         doesSupportsHSBColor|
+                                                         doesSupportsMultichannel|
+                                   /* Second byte: */    doesSupportsDuotone|
+                                                         doesSupportsLABColor,
+                                                         /* 3rd & 4th byte: */ 0,
 
 /* We need this to enable the plugin for BigDocuments */
-VENDORID, LC(m,s,3,2), 0L, 8L, 2000000L, 2000000L,
+VENDORID, LC(m,s,3,2), NULLID, 8L, 2000000L, 2000000L,
 
+/* Required host ('    ' = any) */
+/* Commented out, because there is a risk that a badly programmed host will think that '    '!='8BIM' and doesn't load the plugin then?!*/
+//VENDORID, LC(h,o,s,t), NULLID, 4L, 0x20202020L,
+
+/* "FilterLayerSupport" (Allows smart filters) */
+/* TODO: It seems to work, but are we really fully supporting Smart Filters?! */
+VENDORID, LC(f,l,l,y), NULLID, 4L, 0x80L,
+
+/* Enable info */
+VENDORID, LC(e,n,b,l), NULLID, 4L, 134L, "in (PSHOP_ImageMode, GrayScaleMode, IndexedColorMode, RGBMode, CMYKMode, HSLMode, HSBMode, MultichannelMode, DuotoneMode, LabMode)\0\0\0\0"
+
+/* "Component". Values taken from Clouds.8BF */
+/* TODO: What is this? Commented out to be sure */
+//VENDORID, LC(c,m,p,t), NULLID, 4L, 18L, 0x00170301L, "FilterFoundry\0"
+
+/* MonitorScalingAware */
+/* TODO: Do we support it? For now, commented out */
+//VENDORID, LC(p,m,s,a), NULLID, 4L, 1L,
 
 /* FilterCaseInfo - in all cases:
 	   inStraightData,
