--- a/PiPL.rc
+++ b/PiPL.rc
@@ -64,6 +64,11 @@ BEGIN
 		VENDORID, LC(w,x,8,6), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
 	#endif
 
+	/* Object Identifier attribute */
+	/* Note that 'ViaT' is not a official creator code for ViaThinkSoft and it is unclear where a creator code can be aquired from... */
+	/* Note: Length 24 must be divisible by 4 */
+	LC(V,i,a,T), LC(O,b,I,d), NULLID, 24L, "1.3.6.1.4.1.37476.2.72\0\0",
+
 	#include "PiPL_body.rc"
 
 END
@@ -73,7 +78,7 @@ LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 BEGIN
 	0x0001,       /* Reserved (for Photoshop) */
 	0L,           /* kCurrentPiPLVersion */
-	9L,           /* Property Count */
+	8L,           /* Property Count */
 	VENDORID, LC(w,x,8,6), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
 	#include "PiPL_body.rc"
 END
@@ -83,7 +88,7 @@ LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 BEGIN
 	0x0001,       /* Reserved (for Photoshop) */
 	0L,           /* kCurrentPiPLVersion */
-	9L,           /* Property Count */
+	8L,           /* Property Count */
 	VENDORID, LC(8,6,6,4), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
 	#include "PiPL_body.rc"
 END
