--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -21,7 +21,7 @@
 // This RC file is for Windows only.
 // The PiPL_body contains the properties which are added to PIPL and TPLT (PIPL-Template).
 // PIPL will additionally receive name, catg and hstm
-// Attention: This file may only contain 8 properties. If this number changes,
+// Attention: This file may only contain 7 properties. If this number changes,
 //            please also change PiPL.rc
 
 /* Filter module */
@@ -60,9 +60,9 @@ VENDORID, LC(m,o,d,e), NULLID, 4L, /* First byte:     */ /*doesSupportBitmap|*/
 /* We need this to enable the plugin for BigDocuments */
 VENDORID, LC(m,s,3,2), NULLID, 8L, 2000000L, 2000000L,
 
-/* Required host ('    ' = any) */
+/* Required host ('    ' = ANY) */
 /* Commented out, because there is a risk that a badly programmed host will think that '    '!='8BIM' and doesn't load the plugin then?!*/
-//VENDORID, LC(h,o,s,t), NULLID, 4L, 0x20202020L,
+//VENDORID, LC(h,o,s,t), NULLID, 4L, ANY,
 
 /* "FilterLayerSupport" (Allows smart filters) */
 /* TODO: It seems to work, but are we really fully supporting Smart Filters?! */
@@ -72,12 +72,6 @@ VENDORID, LC(f,l,l,y), NULLID, 4L, 0x80L,
 /* Note: Length 136 must be divisible by 4 */
 /* "Plug-in Resource Guide.pdf", pages 61-62 */
 VENDORID, LC(e,n,b,l), NULLID, 136L, "in (PSHOP_ImageMode, GrayScaleMode, IndexedColorMode, RGBMode, CMYKMode, HSLMode, HSBMode, MultichannelMode, DuotoneMode, LabMode)\0\0\0\0\0\0",
-
-/* Object Identifier attribute */
-/* Note that 'ViaT' is not a official creator code for ViaThinkSoft and it is unclear where a creator code can be aquired from... */
-/* TODO: In the future, create individual OIDs for standalone filters, i.e. via hash */
-/* Note: Length 24 must be divisible by 4 */
-LC(V,i,a,T), LC(O,b,I,d), NULLID, 24L, "1.3.6.1.4.1.37476.2.72\0\0",
 
 /* MonitorScalingAware */
 /* TODO: Do we support it? For now, commented out */
